; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/platform/libpicofe/linux/extr_xenv.c_xenv_update.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/platform/libpicofe/linux/extr_xenv.c_xenv_update.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 }

@g_xstuff = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @xenv_update(i32 (i8*, i32, i32)* %0, i32 (i8*, i32, i32, i32, i32)* %1, i32 (i8*, i32, i32)* %2, i8* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32 (i8*, i32, i32)*, align 8
  %7 = alloca i32 (i8*, i32, i32, i32, i32)*, align 8
  %8 = alloca i32 (i8*, i32, i32)*, align 8
  %9 = alloca i8*, align 8
  store i32 (i8*, i32, i32)* %0, i32 (i8*, i32, i32)** %6, align 8
  store i32 (i8*, i32, i32, i32, i32)* %1, i32 (i8*, i32, i32, i32, i32)** %7, align 8
  store i32 (i8*, i32, i32)* %2, i32 (i8*, i32, i32)** %8, align 8
  store i8* %3, i8** %9, align 8
  %10 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @g_xstuff, i32 0, i32 0), align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %18

12:                                               ; preds = %4
  %13 = load i32 (i8*, i32, i32)*, i32 (i8*, i32, i32)** %6, align 8
  %14 = load i32 (i8*, i32, i32, i32, i32)*, i32 (i8*, i32, i32, i32, i32)** %7, align 8
  %15 = load i32 (i8*, i32, i32)*, i32 (i8*, i32, i32)** %8, align 8
  %16 = load i8*, i8** %9, align 8
  %17 = call i32 @x11h_update(i32 (i8*, i32, i32)* %13, i32 (i8*, i32, i32, i32, i32)* %14, i32 (i8*, i32, i32)* %15, i8* %16)
  store i32 0, i32* %5, align 4
  br label %19

18:                                               ; preds = %4
  store i32 -1, i32* %5, align 4
  br label %19

19:                                               ; preds = %18, %12
  %20 = load i32, i32* %5, align 4
  ret i32 %20
}

declare dso_local i32 @x11h_update(i32 (i8*, i32, i32)*, i32 (i8*, i32, i32, i32, i32)*, i32 (i8*, i32, i32)*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
